*opfvta_bidsdata-1.2 (06 Dec 2019)

  06 Dec 2019;  <chymera@gentoo.org> +metadata.xml, +opfvta_bidsdata-1.2.ebuild:
  sci-biology/opfvta_bidsdata: version bump 1.2 ahead of Gentoo Science