@@ -1,1 +1,2 @@
 DIST opfvta_bidsdata-1.2.tar.xz 12101699696 SHA256 5c48b4214abc8d7cc8c0b8820bba52950427cd44ee397031bfe674503762693f SHA512 213100ccf561b2d805199a876e85f0793545df5d2fed5ac0039e008d0fe9706f9836ca94a351e9651032d2f96b0b91182e1c2d4b129dbf3ec824d852c77880aa WHIRLPOOL 0f0d0fc4a1fcb9324547841517f0584431baef3346c94fcf1e56ff81b5bb62848b72587a0c2d8ca8b53d74a3ac76c2f8c641c38e01290c8637a464db1190f8c1
+DIST opfvta_bidsdata-2.0.tar.xz 12372152444 SHA256 10453e5d9d8e5f747a19d7c8a571cafb8bb2f93128c6ddd97c267520ab8ed781 SHA512 4e8769e358a8f0e2c25b46db094d0cbf375bf4aa83365834be5ee6a1db012d6be6174f0416f0158354a17e9616863a459f9d89ea3df8694bf23d4ecd75b289fc WHIRLPOOL 1738d8257ce18473f7522e175bf893d9b0087b17a8eaff900108fe04e9bc9d8a8ee27cb3d109df1be0b1aa9126a5b6d4a2929dc7014c27b6c0dbc51fec38f7c8
